--- a/css/lecture_theme.scss
+++ b/css/lecture_theme.scss
@@ -110,6 +110,7 @@ div.textbox {
 
 div.textbox > .title {
     margin-bottom: 10px;
+    padding-left: 0.5em;
     background: $themeColor;
     color: $backgroundColor;
 }
