Added comments to lecture theme

--- a/css/lecture_theme.scss
+++ b/css/lecture_theme.scss
@@ -45,6 +45,9 @@ section.has-dark-background {
 @import "theme";
 // ---------------------------------------------
 
+
+// Lecture-specific styling
+
 $citeColor: #a00;
 $alertColor: #f00;
 
