no borders table class

--- a/css/lecture_theme.scss
+++ b/css/lecture_theme.scss
@@ -147,6 +147,10 @@ div.textbox.alert > .title {
     margin: 0em;
 }
 
+table.noborders tr td {
+    border: 0px;
+}
+
 // Lecture overview table
 table.overview td.current {
     font-weight: bold;
