Removed "Based on slides by" prefix to slide_credit in template.

--- a/_layouts/lecture.html
+++ b/_layouts/lecture.html
@@ -52,7 +52,7 @@
 
                     <div class="lecturer">Lecturer: {{lecture.lecturer}}
                         {% if lecture.slide_credit != null %}
-                        <br>Based on slides by {{lecture.slide_credit}}
+                        <br>{{lecture.slide_credit}}
                         {% endif %}
                     </div>
 
