--- a/css/lecture_theme.scss
+++ b/css/lecture_theme.scss
@@ -61,6 +61,13 @@ section.titlepage .title {
     font-size: 1.5em;
 }
 
+section.titlepage .lecturer {
+
+}
+section.titlepage .slide_credit {
+    font-size: 0.8em;
+}
+
 div.figure.inline {
     display: inline-block;
 }
