--- a/css/lecture_theme.scss
+++ b/css/lecture_theme.scss
@@ -61,6 +61,22 @@ section.titlepage .title {
     font-size: 1.5em;
 }
 
+section.titlepage .print-button {
+    text-align: right;
+    margin: 0;
+}
+
+section.titlepage .print-button > a {
+    color:black;
+    border:1px solid black;
+    font-size:0.5em;
+    font-weight:bold;
+    text-transform:uppercase;
+    padding:0.2em;
+    border-radius:0.5em
+}
+
+
 section.titlepage .lecturer {
 
 }
