Added penultimate slide of L15.

--- a/css/lecture_theme.scss
+++ b/css/lecture_theme.scss
@@ -98,6 +98,10 @@ div.figure div.cite {
     font-size: 0.5em;
 }
 
+div.figure div.cite > a {
+    color: $citeColor;
+}
+
 div.figure div.caption {
 }
 
